# serde

.github/workflows/: ci.yml
precompiled/: build.sh
serde/: Cargo.toml
serde_derive/: Cargo.toml
serde_derive/src/: lib.rs  lib_from_source.rs  lib_precompiled.rs
test_suite/: Cargo.toml
test_suite/no_std/: Cargo.toml
