[package]
name = "serde_derive"
version = "1.0.183" # remember to update html_root_url
authors = [
    "Erick Tryzelaar <erick.tryzelaar@gmail.com>",
    "David Tolnay <dtolnay@gmail.com>",
]
categories = ["no-std", "no-std::no-alloc"]
description = "Macros 1.1 implementation of #[derive(Serialize, Deserialize)]"
documentation = "https://serde.rs/derive.html"
homepage = "https://serde.rs"
keywords = ["serde", "serialization", "no_std", "derive"]
license = "MIT OR Apache-2.0"
readme = "crates-io.md"
repository = "https://github.com/serde-rs/serde"
rust-version = "1.56"

[features]
default = []
deserialize_in_place = []
# do not use precompiled
compiled = ["proc-macro2", "quote", "syn"]

[target.'cfg(not(all(target_arch = "x86_64", target_os = "linux", target_env = "gnu")))'.dependencies]
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "2.0.28" }

[lib]
name = "serde_derive"
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }
syn = { version = "2.0.28", optional = true }

[dev-dependencies]
serde = { version = "1", path = "../serde" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
